# raitap

./: .env  .gitattributes  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Development.md  Instructions.md  README.md  SECURITY.md  conftest.py  context7.json  flake.nix  podman-compose.yaml  pyproject.toml  release-please-config.json  requirements.txt  simple_podman_compose.yaml  simpler_podman_compose.yaml
.cursor/plans/: architecture_audit_raitap_9843b8af.plan.md  ci_topology_cleanup_43d884a3.plan.md  codebase_architecture_audit_84ada2e1.plan.md  onnx_pipeline_abstraction_e0bef194.plan.md  transparency_api_refactor_795321fa.plan.md
.github/: copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  docs.yml  new-algorithm.yml  new-backend.yml  new-library.yml  new-module.yml  new-visualiser.yml  new.yml  perf-regression.yml  release.yml
.github/actions/setup-raitap-env/: action.yml
.github/workflows/: code-quality.yaml  codeql.yml  cuda-pr-ready.yml  docs-pages-deploy.yml  docs.yml  format-and-lint.yml  issue-auto-label.yml  package-smoke.yml  pr-checklist.yml  publish-pypi.yml  regen-baselines.yml  release-please.yml  semantic-pr-title.yml  sync-uv-lock-on-release-pr.yml  test-e2e.yml  test.yml
contributor-configs/: README.md
contributor-configs/auto-lirpa-demo/: README.md  assessment.py
contributor-configs/auto-lirpa-imagenet/: README.md  assessment.py
contributor-configs/fasterrcnn-udacity/: README.md  assessment.yaml  labelling-data.md  run.ps1  run.sh
contributor-configs/fasterrcnn-udacity/labels/: udacity-boxes.json
contributor-configs/fasterrcnn-udacity/scripts/: fetch_images.py  generate_candidate_labels.py
contributor-configs/imagecorruptions-imagenet/: README.md  assessment.yaml  run.ps1  run.sh
contributor-configs/lwise-ham10000/: README.md  assessment.yaml  assessment_mlflow.yaml  run.ps1  run.sh
contributor-configs/marabou-mnist/: README.md  assessment.yaml  prep.py  run.ps1  run.sh
contributor-configs/noisetunnel-smoothgrad/: README.md  assessment.yaml
contributor-configs/quantus-eval/: README.md  assessment.yaml  run.ps1  run.sh
contributor-configs/text-classification-sst2/: README.md  assessment.yaml  build_data.py
contributor-configs/tree-xgboost-shap/: README.md  assessment.yaml  build_model.py
deprecated/: app.py  podman.submit  simple_podman_compose.yaml  simpler_podman_compose.yaml
docs/: changelog.md  conf.py  configuration.md  index.md  license.md
docs/_ext/: config_options.py  config_tabs.py  install_tabs.py  raitap_adapters.py  recipe.py  visualiser_card.py
docs/_root/: robots.txt
docs/_static/: custom.css
docs/_templates/sidebar/: navigation.html
docs/archive/consumers/: configuration.md
docs/archive/old-gpt-stuff/: first-run.md  howto.md  installation.md  mlflow.md  transparency-flow.md
docs/codedocs/: architecture.md  explainers-and-semantics.md  hydra-configuration.md  index.md  model-and-data.md  outputs-tracking-and-reporting.md  types.md
docs/codedocs/api-reference/: configs.md  data.md  metrics.md  models.md  reporting.md  run.md  tracking.md  transparency-core.md  transparency-visualisers.md  utils.md
docs/codedocs/guides/: cli-assessment.md  custom-data-and-labels.md  shap-background-and-batching.md  tracking-and-reports.md
docs/consumers/: configuration.md
docs/contributor/: adding-a-module.md  adding-a-task-family.md  adding-an-adapter.md  adding-an-algorithm.md  adr.md  architecture.md  capabilities.md  data.md  going-stable-1-0.md  index.md  logging.md  metrics.md  preprocessing.md  pull-requests.md  releases.md  robustness.md  setup.md  tracking.md  transparency.md  writing-a-plugin.md
docs/contributor/adding/: adding-a-backend.md  adding-a-module.md  adding-a-task-family.md  adding-an-adapter.md  adding-an-algorithm.md  adding-an-input-parser.md  index.md
docs/contributor/modules/: data.md  index.md  metrics.md  robustness.md  tracking.md  transparency.md
docs/contributors/transparency/: architecture.md  (+1 more)
docs/explanation/: index.md  pipeline.md
docs/how-to/: hydra-overrides.md
docs/reference/: index.md
docs/tutorials/: index.md  installation.md
docs/using-raitap/: auto-extras.md  configuration.md  consuming-raitap.md  flags.md  get-it-running.md  index.md  installation.md  job-launcher.md  standalone-integrated.md  understanding-outputs.md  using-plugins.md
example/: README.md  assessment.py  assessment.yaml  pyproject.toml
example-plugin/: README.md  assessment.yaml  pyproject.toml
example-plugin/raitap_example_plugin/: __init__.py
example/configs/: assessment.yaml
examples/: download_test_images.py  resnet_50_inference.py  transparency_basic.py  transparency_config.py  transparency_real_images.py
robustness/: metadata.json  robustness_data.pt
scripts/: README.md  demo_lwise_ham10000.cmd  demo_lwise_ham10000.ps1  demo_lwise_ham10000.sh  demo_marabou_mnist.sh  generate_visualiser_previews.py  llmify_docs.py  prep_uc1_mnist.py  smoke_test_mlflow.py
src/: model_export.py  model_inference.py
src/dags/: dag_bily_anchors.py  dag_bily_gradcam_gradients.py  dag_bily_shap.py
src/hydra_plugins/: raitap_search_path.py
src/raitap/: README.md  __about__.py  __init__.py  _adapter_factory.py  _adapters.py  _cli_argv.py  _config_schema.py  _entry.py  adapters.py  api.py  backends.py  cli.py  docs_preview.py  registry_base.py  reproducibility.py  run.py  semantics_base.py  types.py  visualisers.py
src/raitap/tests/_fake_broken_plugin/: pyproject.toml
src/raitap/tests/_fake_broken_plugin/raitap_fakebrokenplugin/: __init__.py
src/raitap/tests/_fake_plugin/: pyproject.toml
src/raitap/tests/_fake_plugin/raitap_fakeplugin/: __init__.py
src/scripts/: gradcam.py
src/transparency/: gradcam.py
tests/metrics/: test_classification_metrics.py  test_classification_tm.py  test_detection_tm.py
tests/transparency/: __init__.py  conftest.py  test_captum_explainer.py  test_integration.py  test_methods.py  test_shap_explainer.py  test_visualisers.py
(+580 files in other folders)
