[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raitap"
version = "0.1.0"
authors = [
  { name = "Stanislas Laurent", email = "lauresta@students.zhaw.ch" },
  { name = "Jonas Vonderhagen", email = "vondejon@students.zhaw.ch" },
  { name = "Philipp Denzel", email = "denp@zhaw.ch" },
  { name = "Oliver Forster", email = "foro@zhaw.ch" },
]
maintainers = [
  { name = "Stanislas Laurent", email = "lauresta@students.zhaw.ch" },
  { name = "Jonas Vonderhagen", email = "vondejon@students.zhaw.ch" },
  { name = "Philipp Denzel", email = "denp@zhaw.ch" },
  { name = "Oliver Forster", email = "foro@zhaw.ch" },
]
description = "Python library to assess the responsibility level of AI models for integration into MLOps workflows."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
keywords = [
  "artificial intelligence",
  "deep learning",
  "neural networks",
  "technical assessment",
  "responsible AI",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

dependencies = [
  # Core runtime.
  "hydra-core>=1.3.2",
  "numpy>=2.4.2",

  # Data and visualisation.
  "matplotlib>=3.9.0",
  "pandas>=2.0.0",
  "pandas-stubs~=3.0.0",
  "pillow>=10.0.0",
]

[project.scripts]
raitap = "raitap.run.__main__:main"
docs-preview = "raitap.docs_preview:main"

[project.urls]
Documentation = "https://caiivs.github.io/raitap/"
Homepage = "https://caiivs.github.io/raitap/"
Repository = "https://github.com/CAIIVS/raitap/"
Issues = "https://github.com/CAIIVS/raitap/issues"
Source = "https://github.com/CAIIVS/raitap/"


[project.optional-dependencies]
# Backend module
torch-cpu = ["torch>=2.10.0", "torchvision>=0.20.0"]
torch-cuda = ["torch>=2.10.0", "torchvision>=0.20.0"]
torch-intel = [
  "torch>=2.10.0; python_full_version < '3.14'",
  "torchvision>=0.20.0; python_full_version < '3.14'",
  "triton-xpu; python_full_version < '3.14'",
]
# TODO remove bundled torch deps once ONNX no longer relies on torch tensors internally
onnx-cpu = [
  "onnx>=1.21.0",
  "onnxruntime>=1.24.4",
  "torch>=2.10.0",
  "torchvision>=0.20.0",
]
onnx-cuda = [
  "onnx>=1.21.0",
  "onnxruntime-gpu>=1.24.4",
  "torch>=2.10.0",
  "torchvision>=0.20.0",
]
onnx-intel = [
  "onnx>=1.21.0",
  "onnxruntime-openvino>=1.24.1",
  "openvino>=2025.1.0; sys_platform == 'win32'",
  "torch>=2.10.0; python_full_version < '3.14'",
  "torchvision>=0.20.0; python_full_version < '3.14'",
  "triton-xpu; python_full_version < '3.14'",
]

# Transparency module
shap = ["shap>=0.46.0"]
captum = ["captum>=0.7.0"]
transparency = ["raitap[shap,captum]"]

# Cluster / launcher support
cluster = ["hydra-submitit-launcher>=1.2.0"]

# Tracking module
mlflow = ["mlflow>=3.9.0"]
tracking = ["raitap[mlflow]"]

# Metrics module
metrics = ["torchmetrics>=1.8.2", "faster-coco-eval>=1.6.3"]

# Reporting module
reporting = ["borb==3.0.7"]

[dependency-groups]
lint = ["ruff>=0.8.0", "pyright>=1.1.390"]
test = ["pytest>=8.0.0", "pytest-cov>=4.1.0", "pytest-mpl>=0.19.0"]
tooling = ["pre-commit>=4.0.0", "commitizen>=3.0.0"]
docs = [
  "sphinx>=8.0.0",
  "myst-parser>=4.0.0",
  "furo>=2024.8.6",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.6.1",
  "sphinx-autobuild>=2024.10.3",
]
dev = [
  { include-group = "lint" },
  { include-group = "test" },
  { include-group = "tooling" },
  { include-group = "docs" },
]

# uv dependency resolution rules.
[tool.uv]
# PyPI wheel for borb 3.0.x is invalid (duplicate ZIP entries); build from sdist instead.
no-binary-package = ["borb"]
conflicts = [
  [
    { extra = "torch-cpu" },
    { extra = "torch-cuda" },
    { extra = "torch-intel" },
  ],
  [
    { extra = "onnx-cpu" },
    { extra = "onnx-cuda" },
    { extra = "onnx-intel" },
  ],
  [
    { extra = "onnx-cpu" },
    { extra = "torch-cuda" },
  ],
  [
    { extra = "onnx-cpu" },
    { extra = "torch-intel" },
  ],
  [
    { extra = "onnx-cuda" },
    { extra = "torch-cpu" },
  ],
  [
    { extra = "onnx-cuda" },
    { extra = "torch-intel" },
  ],
  [
    { extra = "onnx-intel" },
    { extra = "torch-cpu" },
  ],
  [
    { extra = "onnx-intel" },
    { extra = "torch-cuda" },
  ],
]

# Map runtime extras to the correct package indexes.
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "torch-cpu" },
  { index = "pytorch-cpu", extra = "onnx-cpu" },
  { index = "pytorch-cuda", extra = "torch-cuda" },
  { index = "pytorch-cuda", extra = "onnx-cuda" },
  { index = "pytorch-intel", extra = "torch-intel" },
  { index = "pytorch-intel", extra = "onnx-intel" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "torch-cpu" },
  { index = "pytorch-cpu", extra = "onnx-cpu" },
  { index = "pytorch-cuda", extra = "torch-cuda" },
  { index = "pytorch-cuda", extra = "onnx-cuda" },
  { index = "pytorch-intel", extra = "torch-intel" },
  { index = "pytorch-intel", extra = "onnx-intel" },
]
triton-xpu = [
  { index = "pytorch-intel", extra = "torch-intel" },
  { index = "pytorch-intel", extra = "onnx-intel" },
]


# Explicit indexes used by runtime extras.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-intel"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/raitap"]
include = ["src/raitap/py.typed", "src/raitap/**/*.yaml", "src/raitap/**/*.yml"]
exclude = ["src/raitap/**/test_*.py", "src/raitap/**/conftest.py"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["assets", "usecases", "outputs", "mlartifacts"]

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "N",
  "UP",
  "B",
  "C4",     # flake8-comprehensions
  "SIM",
  "RUF",
  "ANN001",
  "ANN201",
  "ANN202",
  "TCH",    # flake8-type-checking
  "PYI",
  "PGH003",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Allow unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.commitizen]
name = "cz_customize"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = false
major_version_zero = true

[tool.commitizen.customize]
schema = "<type>(<scope>): <subject>"
# If a scope is present, it must be one of the allowed values below.
schema_pattern = "^(feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert)(\\((transparency|tracking|metrics|docs|infra|deps|misc|config|model|data|reporting)\\))?(!)?:\\s.+$"

[tool.pyright]
include = ["src"]
exclude = [
  "**/.*",
  "**/.venv",
  "**/__pycache__",
  "**/node_modules",
  "**/build",
  "**/dist",
  "assets",
  "usecases",
  "outputs",
  "mlartifacts",
]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true

[tool.pytest.ini_options]
norecursedirs = ["assets", "usecases", "outputs", "mlartifacts"]
testpaths = ["src"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
  "e2e: end-to-end tests that are resource-intensive; run once per PR, not on every commit",
  "mpl: matplotlib baseline-regression tests that require committed reference images",
  "runtime: runtime resolution and backend hardware-label tests for platform-specific CI selection",
  "cuda: tests that require real CUDA hardware and run only on the GPU CI lane",
]
addopts = ["-v", "--strict-markers", "--strict-config", "--tb=short"]
filterwarnings = [
  # captum raises this when inputs don't already require gradients; expected during tests
  "ignore:Input Tensor.*required_grads:UserWarning",
  # captum uses deprecated matplotlib cm.get_cmap; will be fixed upstream
  "ignore:The get_cmap function was deprecated:matplotlib.MatplotlibDeprecationWarning",
  # shap uses np.random.seed internally; will be fixed upstream
  "ignore:The NumPy global RNG was seeded:FutureWarning",
  # tight_layout incompatibility in ShapImageVisualiser; cosmetic only
  "ignore:This figure includes Axes that are not compatible with tight_layout:UserWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]
