[project]
name = "raitap-example"
version = "0.0.1"
description = "Standalone example project demonstrating raitap as a library dependency."
requires-python = ">=3.11,<3.14"
# Only the `raitap` dep is needed. It will add required extras automatically when a config is ran.
dependencies = [
  "raitap",
]

[tool.uv]
package = false

[tool.uv.sources]
# This line below should be REMOVED for real projects.
raitap = { path = "..", editable = true }
