[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raitap-fakebrokenplugin"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = ["raitap>=0,<999"]

[project.entry-points."raitap.adapters"]
fakebroken = "raitap_fakebrokenplugin"

[tool.hatch.build.targets.wheel]
packages = ["raitap_fakebrokenplugin"]
